[project]
name = "vesta"
version = "0.1.0"
description = "Formatter, previewer, and publisher for Vestaboard devices"
readme = "README.md"
requires-python = ">=3.11"
license = { text = "MIT" }
dependencies = [
    "requests>=2.28",
]

[project.urls]
Homepage = "https://github.com/q/vesta"
Repository = "https://github.com/q/vesta"

[project.scripts]
vesta = "vesta:main"

[build-system]
requires = ["setuptools>=61"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
py-modules = ["vesta"]

[dependency-groups]
dev = [
    "pytest>=9.0.2",
]
